[package]
name = "bbe"
version = "0.1.0"
authors = ["darksv <darek969-12@o2.pl>"]
edition = "2018"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", rev="f50695dfddbe2dbc9690230dceda5bf82b6ed80f", features = ["image"] }
image = "0.23.14"

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3