[package]
name = "bbe"
version = "0.1.0"
authors = ["darksv <darek969-12@o2.pl>"]
edition = "2018"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", rev="c02452ddeebc527992e8f112f434f23ce24c934d", features = ["image"] }
image = "0.24.4"

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3